--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "your-project",
+  "name": "chat-application",
   "version": "1.0.0",
-  "engines": {
-    "node": "18.x"
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
